--- a/style.css
+++ b/style.css
@@ -1,47 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
-
 :root {
---cor-de-fundo:  #1E1E1E;
---verde: #6FFF57;
---branco: #FFFFFF;
---botão-ativo:#3A375E;
---botão-inativo:rgba(58,55,94,0.5);
---texto-fundo:rgba(58,55,94,0.3);
+    --cor-de-fundo:#1e1e1e;
+    --verde:#6fff5f;
+    --branco:#ffffff;
+    --botao-ativo:#3a375e;
+    --botao-inativo: rgba(58,55,94,0.5);
+    --texto-fundo: rgba(58,55,94,0.3);
 }
-
-
-body {
-background-color: #1E1E1E;
-color: #FFFFFF;
-font-family:'Chakra Petch', sans-serif;
-
+body{
+    background-color: var(--cor-de-fundo);
+    color: var(--branco);
+    font-family: 'Chakra Petch', Sans-Serif;
 }
 .conteudo-principal{
     display:flex;
-    flex-direction: column;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-
 }
-
 .titulo-principal{
     text-align: left;
     width: 100%;
     font-size: 32px;
-
 }
-
 .titulo-principal span{
     color: var(--verde);
-
 }
-
 .botao{
-    font-family: 'Chakra Petch', sans-serif;
-    background-color: var(--botão-inativo);
+    font-family: 'Chakra Petch', sans-serif ;
+    background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
     justify-content: center;
@@ -49,49 +39,43 @@ font-family:'Chakra Petch', sans-serif;
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid var(--botão-ativo);
-    border-left: 2px solid var(--botão-ativo);
-    border-right: 2px solid var(--botão-ativo);
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
-
 }
-
 .botao:first-child{
     border-radius: 40px 40px 0 0;
-
 }
-
 .botoes.ativo{
-    display: block; 
-
+    display: block;
 }
-.ativo{
-    background-color: var(--botão-ativo);
+.ativo {
+    background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
-.abas-texto{
-background-color: var(--botão-ativo);
-border-bottom: 4px solid var(--verde);
-}
-.aba-conteudo-ativo {
-display: block;
+.aba-conteudo.ativo{
+    display: block;
 }
 .aba-conteudo{
     display: none;
 }
+.aba-conteudo-texto-pincipal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-texto-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
 
-
-
-
-
-
-
-@media screen and (min-width:750px){
-    .botoes{
+@media screen and (min-width: 750px){
+    .botoes{ 
         display: flex;
     }
     .botao:first-child{
-        border-radius: 40px 0 0 0;
+        border-radius:40px 0 0 0;
     }
     .botao:last-child{
         border-radius: 0 40px 0 0;
